--- a/sample_user_config.json
+++ b/sample_user_config.json
@@ -3,7 +3,10 @@
         "pid": "0x0001",
         "vid": "0x46f4",
         "sn": "1780PDN268801",
-        "mac1": "0011323d47f7"
+        "mac1": "0011323d47f7",
+        "DiskIdxMap': "01",
+        "SataPortMap": "4",
+        "SasIdxMap": "0"
     },
     "synoinfo": {},
     "ramdisk_copy": {},
